--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@iconscout/react-unicons": "^2.0.2",
+    "bootstrap": "^5.3.3",
+    "emailjs-com": "^3.2.0",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.10.4",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -22,6 +29,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "react-router-dom": "^6.25.1",
     "vite": "^5.2.0"
   }
 }
